fixed wrong height of editor in Firefox

--- a/CodePrinter.css
+++ b/CodePrinter.css
@@ -28,6 +28,7 @@
   border: 1px solid #d4d4d4;
   min-width: 50px;
   min-height: 20px;
+  height: 300px;
   overflow: hidden;
   position: relative;
   top: 0;
@@ -71,17 +72,17 @@
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  -webkit-flex: 1 1 300px;
-  -moz-flex: 1 1 300px;
-  -ms-flex: 1 1 300px;
-  -o-flex: 1 1 300px;
-  flex: 1 1 300px;
+  -webkit-flex: 1 1 100%;
+  -moz-flex: 1 1 100%;
+  -ms-flex: 1 1 100%;
+  -o-flex: 1 1 100%;
+  flex: 1 1 100%;
   -webkit-flex-flow: row;
   -moz-flex-flow: row;
   -ms-flex-flow: row;
   -o-flex-flow: row;
   flex-flow: row;
-  height: 300px;
+  min-height: 300px;
   background: #fcfcfc;
   position: relative;
   font-family: Menlo, Monaco, Consolas, Courier, monospace;
